--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
+      <h1 style="margin-left: 10px;">Gigawashu Das</h1>
       <h1>HTML/CSS Quiz</h1>
       <nav>
         <ul>
